# semantic_map

./: .gitattributes  .gitignore  README.md
app/app/: lidar_controller.py  line_following.py  object_tracking.py
app/app/model/: hand_landmark_sparse_Nx3x224x224.onnx  palm_detection_full_inf_post_192x192.onnx
app/launch/: lidar_node.launch.py  line_following_node.launch.py  object_tracking_node.launch.py  self_driving_node.launch.py  start_app.launch.py
bringup/bringup/: startup_check.py
calibration/config/: imu_calib.yaml
docs/semantic_mapping/: quick_commands.md
driver/controller/config/: calibrate_params.yaml  ekf.yaml  ekf_rf2o.yaml  init_pose.yaml  robot_1_ekf.yaml  robot_2_ekf.yaml
driver/controller/controller/: ackermann.py  init_pose.py  mecanum.py  odom_publisher_node.py
driver/kinematics/: package.xml  setup.py
driver/kinematics_msgs/: CMakeLists.txt  package.xml
driver/kinematics_msgs/msg/: JointsRange.msg  Link.msg
driver/kinematics_msgs/srv/: GetJointRange.srv  GetLink.srv  GetRobotPose.srv  SetJointRange.srv  SetJointValue.srv  SetLink.srv  SetRobotPose.srv
driver/servo_controller/: package.xml  setup.py
driver/servo_controller_msgs/: CMakeLists.txt  package.xml
example/: package.xml  setup.py
example/config/: automatic_pick_roi.yaml  bridge_plane_distance.yaml  color_sorting_roi.yaml  garbage_classification_roi.yaml  line_follow_clean_roi.yaml  plane_distance.yaml
interfaces/: CMakeLists.txt
interfaces/msg/: ObjectInfo.msg
interfaces/srv/: SetBox.srv  SetStringBool.srv
large_models/: .gitignore
large_models/large_models/: package.xml  setup.cfg  setup.py
large_models/large_models_msgs/: CMakeLists.txt  package.xml
large_models/large_models_msgs/msg/: AgentResult.msg  Tools.msg  Transport.msg
large_models/large_models_msgs/srv/: SetBox.srv  SetContent.srv  SetModel.srv  SetTools.srv  SetTransportObject.srv
large_models_examples/: package.xml  setup.cfg  setup.py
large_models_examples/config/: automatic_pick_roi.yaml  automatic_transport_roi.yaml
large_models_examples/large_models_examples/: llm_color_track.launch.py  llm_color_track.py  llm_control_move.launch.py  llm_control_move.py  llm_control_move_offline.py  llm_visual_patrol.launch.py  llm_visual_patrol.py  navigation_controller.py  obstacle_avoidance_filter.py  track_anything.py  tracker.py  vllm_navigation.launch.py  vllm_navigation.py  vllm_track.launch.py  vllm_track.py  vllm_with_camera.launch.py  vllm_with_camera.py
multi/: package.xml  setup.py
multi/launch/: amcl.launch.py  carto_nav.launch.py  map.launch.py  navigation_launch.py  robot1_amcl.launch.py  robot1_nav.launch.py  robot2_amcl.launch.py  robot2_nav.launch.py  robot3_amcl.launch.py  robot3_nav.launch.py
multi/multi/: get_follower_point.py  pub_follower_goal.py
multi/param/: robot1_amcl_param.yaml  robot1_nav_param.yaml  robot2_amcl_param.yaml  robot2_nav_param.yaml  robot3_amcl_param.yaml  robot3_nav_param.yaml
multi/rviz/: navigation.rviz
navigation/config/: nav2_controller_teb.yaml  nav2_params.yaml  navigate_to_pose_minimal.xml
navigation/launch/: navigation.launch.py  rtabmap_navigation.launch.py  rtabmapviz.launch.py
navigation/rviz/: navigation.rviz  navigation_controller.rviz  navigation_desktop.rviz  navigation_transport.rviz  rtabmap.rviz
peripherals/config/: lidar_filters_config_default.yaml  lidar_filters_config_ms200.yaml  lidar_filters_config_sclidar.yaml
peripherals/launch/: depth_camera.launch.py  imu_filter.launch.py  imu_view.launch.py  joystick_control.launch.py  lidar.launch.py  lidar_view.launch.py  usb_cam.launch.py
peripherals/peripherals/: joystick_control.py  teleop_key_control.py
peripherals/rviz/: lidar_view.rviz
semantic_mapping/: README.md  package.xml  setup.py
semantic_mapping/config/: nav2_controller_teb_semantic.yaml  nav2_params_semantic.yaml
semantic_mapping/rviz/: semantic_mapping.rviz
semantic_mapping/semantic_mapping/: __init__.py  semantic_map_marker_publisher.py  semantic_navigation_tool.py  semantic_voxel_mapper.py
simulations/rosorin_description/: package.xml  setup.cfg  setup.py
slam/config/: cartographer_2d.lua  gmapping.yaml  slam.yaml
slam/launch/: rtabmap_slam.launch.py  slam.launch.py
slam/maps/: map_01.pgm  map_01.yaml  map_02.pgm  map_02.yaml  semantic_map.pgm  semantic_map.yaml  test.pgm  test.yaml
slam/rviz/: rtabmap.rviz  slam.rviz  slam_desktop.rviz
xf_mic_asr_offline/: CMakeLists.txt  package.xml  xf_mic.rules
xf_mic_asr_offline/audio/: vvui_deno.pcm
xf_mic_asr_offline/config/: call.bnf
xf_mic_asr_offline/config/msc/msc/14568787b9f27199e9ec950aa0af565e/: cfg.ldata
xf_mic_asr_offline/config/msc/res/asr/: common.jet
xf_mic_asr_offline/config/msc/res/asr/GrmBuilld/: avufhxea.d  bgofdgea.d  bzvskdaa.d  call.g  call_16K  ckrpirfa.d  cofeaaaa.d  cpajlpfa.d  cyqdtoba.d  dcoqydga.d  drusmmga.d  dtfeaaaa.d  eeqyjjba.d  exxwavba.d  eyfeaaaa.d  feqptica.d  gineyoca.d  guufoaaa.d  gxorqzea.d  hwvsdaaa.d  iizywfea.d  jgbfalfa.d  jpilrlba.d  jqegctba.d  komrpdba.d  krihtaaa.d  lvzuqgca.d  mxrgqrea.d  ndubimca.d  nejzeoaa.d  oicueeaa.d  okurwyca.d  ozzulgga.d  pucowmda.d  pzonwlba.d  qhjtnraa.d  qtjnrvaa.d  qugcsoaa.d  raydrrba.d  roikquaa.d  (+19 more)
xf_mic_asr_offline/include/: asr_offline_record_sample.h  record_param.h  user_interface.h  voice_control.h
xf_mic_asr_offline/launch/: mic_init.launch.py  startup_test.launch.py  voice_control_color_detect.launch.py  voice_control_move.launch.py  voice_control_navigation.launch.py
xf_mic_asr_offline/launch/msc/14568787b9f27199e9ec950aa0af565e/: cfg.ldata
xf_mic_asr_offline/scripts/: asr_node.py  awake_node.py  voice_control_color_detect.py  voice_control_move.py  voice_control_navigation.py  wonder_echo_pro_node.py
xf_mic_asr_offline/scripts/msc/14568787b9f27199e9ec950aa0af565e/: cfg.ldata
xf_mic_asr_offline/src/: voice_control.cpp
xf_mic_asr_offline/xf_mic_asr_offline/: voice_play.py
xf_mic_asr_offline/xf_mic_asr_offline/msc/14568787b9f27199e9ec950aa0af565e/: cfg.ldata
xf_mic_asr_offline_msgs/: CMakeLists.txt  package.xml
(+151 files in other folders)
