<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_mapping</name>
  <version>0.0.0</version>
  <description>Semantic mapping and semantic navigation tools.</description>
  <maintainer email="2436210442@qq.com">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>interfaces</depend>
  <depend>large_models</depend>
  <depend>large_models_msgs</depend>

  <exec_depend>controller</exec_depend>
  <exec_depend>example</exec_depend>
  <exec_depend>navigation</exec_depend>
  <exec_depend>peripherals</exec_depend>
  <exec_depend>slam</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
